--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,14 @@ go:
   - 1.4.2
 sudo: false
 before_script:
-  - gotools=golang.org/x/tools
+  - export GOTOOLS="golang.org/x/tools"
   - if [ "$TRAVIS_GO_VERSION" = "release" ]; then gotools=code.google.com/p/go.tools; fi
 install:
   - export GOPATH="${TRAVIS_BUILD_DIR}/Godeps/_workspace:$GOPATH"
   - export PATH="${TRAVIS_BUILD_DIR}/Godeps/_workspace/bin:$PATH"
   - go get -d -t -v ./...
-  - go get -v $gotools/cmd/cover
-  - go get -v $gotools/cmd/vet
+  - go get -v $GOTOOLS/cmd/cover
+  - go get -v $GOTOOLS/cmd/vet
   - go get -v github.com/bradfitz/goimports
   - go get -v github.com/golang/lint/golint
 script:
