--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ go:
   - 1.3.3
   - 1.4.2
 sudo: false
-before_script:
-  - export GOTOOLS="golang.org/x/tools"
+before_install:
+  - gotools=golang.org/x/tools
   - if [ "$TRAVIS_GO_VERSION" = "release" ]; then gotools=code.google.com/p/go.tools; fi
 install:
   - export GOPATH="${TRAVIS_BUILD_DIR}/Godeps/_workspace:$GOPATH"
