--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -50,6 +50,10 @@
   name = "github.com/juju/deputy"
 
 [[constraint]]
+  name = "github.com/kennygrant/sanitize"
+  version = "1.2.3"
+
+[[constraint]]
   branch = "master"
   name = "github.com/mattn/go-pkg-rss"
 
