--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -13,7 +13,9 @@ archive:
   replacements:
     darwin: Darwin
     linux: Linux
-    windows: Windows
+    freebsd: FreeBSD
+    openbsd: OpenBSD
+    netbsd: NetBSD
     386: i386
     amd64: x86_64
 checksum:
